-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.1, 6.3.0 Feature Freeze
-
None
-
1cf45eed088bd1ef1c89a9812c6f69d16bce56f7 (qt/qtwebengine/dev) 5b11835bc84e2a6ee8af62f156525d1ffa3d211f (qt/qtwebengine/6.2)
agent:2021/10/08 16:04:37 build.go:393: Start 7: tst_certificateerror agent:2021/10/08 16:04:37 build.go:393: 7: Test command: /opt/cmake-3.21.1/bin/cmake "-P" "/home/qt/work/qt/qtwebengine_standalone_tests/tests/auto/core/certificateerror/tst_certificateerrorWrapperRelWithDebInfo.cmake" agent:2021/10/08 16:04:37 build.go:393: 7: Test timeout computed to be: 1500 agent:2021/10/08 16:04:37 build.go:393: 7: ********* Start testing of tst_CertificateError ********* agent:2021/10/08 16:04:37 build.go:393: 7: Config: Using QtTest library 6.2.1, Qt 6.2.1 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 9.3.0), ubuntu 20.04 agent:2021/10/08 16:04:37 build.go:393: 7: PASS : tst_CertificateError::initTestCase() agent:2021/10/08 16:04:37 build.go:393: 7: QINFO : tst_CertificateError::handleError(Reject) qt.webenginecontext: agent:2021/10/08 16:04:37 build.go:393: 7: agent:2021/10/08 16:04:37 build.go:393: 7: GLImplementation: desktop agent:2021/10/08 16:04:37 build.go:393: 7: Surface Type: OpenGL agent:2021/10/08 16:04:37 build.go:393: 7: Surface Profile: NoProfile agent:2021/10/08 16:04:37 build.go:393: 7: Surface Version: 3.1 agent:2021/10/08 16:04:37 build.go:393: 7: Using Default SG Backend: yes agent:2021/10/08 16:04:37 build.go:393: 7: Using Software Dynamic GL: no agent:2021/10/08 16:04:37 build.go:393: 7: Using Angle: no agent:2021/10/08 16:04:37 build.go:393: 7: agent:2021/10/08 16:04:37 build.go:393: 7: Init Parameters: agent:2021/10/08 16:04:37 build.go:393: 7: * application-name tst_certificateerror agent:2021/10/08 16:04:37 build.go:393: 7: * browser-subprocess-path /home/qt/work/install/libexec/QtWebEngineProcess agent:2021/10/08 16:04:37 build.go:393: 7: * disable-features DnsOverHttpsUpgrade,ConsolidatedMovementXY,InstalledApp,BackgroundFetch,WebOTP,WebPayments,WebUSB,PictureInPicture agent:2021/10/08 16:04:37 build.go:393: 7: * disable-setuid-sandbox agent:2021/10/08 16:04:37 build.go:393: 7: * disable-speech-api agent:2021/10/08 16:04:37 build.go:393: 7: * enable-features TracingServiceInProcess agent:2021/10/08 16:04:37 build.go:393: 7: * enable-threaded-compositing agent:2021/10/08 16:04:37 build.go:393: 7: * gpu-preferences UAAAAAAAAAAoAAAQAAAAAAAAAAAAAAAAAABgAAAAAAAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAAAAAACAAAAAAAAAAAAAAAAAAAAAIAAAAAAAAAAgAAAAAAAAACAAAAAAAAAA= agent:2021/10/08 16:04:37 build.go:393: 7: * in-process-gpu agent:2021/10/08 16:04:37 build.go:393: 7: * use-gl desktop agent:2021/10/08 16:04:37 build.go:393: 7: agent:2021/10/08 16:04:37 build.go:393: 7: [4918:4934:1008/160437.909532:ERROR:ssl_client_socket_impl.cc(947)] handshake failed; returned -1, SSL error code 1, net_error -202 agent:2021/10/08 16:04:37 build.go:393: 7: QWARN : tst_CertificateError::handleError(Reject) ! Socket Error: QAbstractSocket::SocketError(13) agent:2021/10/08 16:04:37 build.go:393: 7: QWARN : tst_CertificateError::handleError(Reject) HttpServer: unexpected disconnect agent:2021/10/08 16:04:37 build.go:393: 7: PASS : tst_CertificateError::handleError(Reject) agent:2021/10/08 16:04:38 build.go:393: 7: [4918:4934:1008/160438.025870:ERROR:ssl_client_socket_impl.cc(947)] handshake failed; returned -1, SSL error code 1, net_error -202 agent:2021/10/08 16:04:38 build.go:393: 7: QWARN : tst_CertificateError::handleError(DeferReject) ! Socket Error: QAbstractSocket::SocketError(13) agent:2021/10/08 16:04:38 build.go:393: 7: QWARN : tst_CertificateError::handleError(DeferReject) HttpServer: unexpected disconnect agent:2021/10/08 16:04:38 build.go:393: 7: PASS : tst_CertificateError::handleError(DeferReject) agent:2021/10/08 16:04:38 build.go:393: 7: [4918:4934:1008/160438.180984:ERROR:ssl_client_socket_impl.cc(947)] handshake failed; returned -1, SSL error code 1, net_error -202 agent:2021/10/08 16:04:38 build.go:393: 7: QWARN : tst_CertificateError::handleError(DeferAccept) ! Socket Error: QAbstractSocket::SocketError(13) agent:2021/10/08 16:04:38 build.go:393: 7: QWARN : tst_CertificateError::handleError(DeferAccept) HttpServer: unexpected disconnect agent:2021/10/08 16:04:38 build.go:393: 7: QWARN : tst_CertificateError::handleError(DeferAccept) ! Socket Error: QAbstractSocket::RemoteHostClosedError agent:2021/10/08 16:04:38 build.go:393: 7: QWARN : tst_CertificateError::handleError(DeferAccept) HttpServer: unexpected disconnect agent:2021/10/08 16:04:38 build.go:393: 7: QINFO : tst_CertificateError::handleError(DeferAccept) HttpServer: GET / 200 30 agent:2021/10/08 16:04:38 build.go:393: 7: [4918:4934:1008/160438.389870:ERROR:ssl_client_socket_impl.cc(947)] handshake failed; returned -1, SSL error code 1, net_error -202 agent:2021/10/08 16:04:38 build.go:393: 7: QWARN : tst_CertificateError::handleError(DeferAccept) ! Socket Error: QAbstractSocket::SocketError(13) agent:2021/10/08 16:04:38 build.go:393: 7: QWARN : tst_CertificateError::handleError(DeferAccept) HttpServer: unexpected disconnect agent:2021/10/08 16:04:38 build.go:393: 7: PASS : tst_CertificateError::handleError(DeferAccept) agent:2021/10/08 16:04:38 build.go:393: 7: [4879:4911:1008/160438.725629:ERROR:cert_verify_proc_builtin.cc(637)] CertVerifyProcBuiltin for revoked.badssl.com failed: agent:2021/10/08 16:04:38 build.go:393: 7: ----- Certificate i=0 (CN=revoked.badssl.com,O=Lucas Garron Torres,L=Walnut Creek,ST=California,C=US) ----- agent:2021/10/08 16:04:38 build.go:393: 7: ERROR: Time is after notAfter agent:2021/10/08 16:04:38 build.go:393: 7: agent:2021/10/08 16:04:38 build.go:393: 7: agent:2021/10/08 16:04:38 build.go:393: 7: [4918:4934:1008/160438.731186:ERROR:ssl_client_socket_impl.cc(947)] handshake failed; returned -1, SSL error code 1, net_error -201 agent:2021/10/08 16:04:38 build.go:393: 7: FAIL! : tst_CertificateError::fatalError() '!page.error->isOverridable()' returned FALSE. () agent:2021/10/08 16:04:38 build.go:393: 7: Loc: [/home/qt/work/qt/qtwebengine/tests/auto/core/certificateerror/tst_certificateerror.cpp(151)] agent:2021/10/08 16:04:38 build.go:393: 7: PASS : tst_CertificateError::cleanupTestCase() agent:2021/10/08 16:04:38 build.go:393: 7: Totals: 5 passed, 1 failed, 0 skipped, 0 blacklisted, 1039ms agent:2021/10/08 16:04:38 build.go:393: 7: ********* Finished testing of tst_CertificateError *********
Details: https://testresults.qt.io/coin/integration/qt/qtwebengine/tasks/1633712938
Tested changes (refs/builds/qtci/6.2/1633708464):
https://codereview.qt-project.org/c/qt/qtwebengine/+/375787/2 Update dependencies on '6.2' in qt/qtwebengine
| For Gerrit Dashboard: QTBUG-97414 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 376049,4 | Blacklist certificate test until certicates have been renewed | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 376251,2 | Blacklist certificate test until certicates have been renewed | 6.2 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 376494,2 | Blacklist certificate test until certicates have been renewed | 6.2.0 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 376519,4 | Blacklist certificate test until certicates have been renewed | 5.15 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 384212,6 | Fix race condition on layout (take2) | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 384774,3 | Fix race condition on layout (take2) | 6.2 | qt/qtwebengine | Status: MERGED | +2 | 0 |