Fix race condition on layout (take2)

Even if layout is 'meaningful' it can still require update before
toPlainTextSync call can proceed.

Simply wait for frame being loaded in stead of tracking layout
update.

Depending on DidLoadFinish will brake default toHtml call for empty
not loaded page, therefore return expected value if there is no load.

This fixes crashes/asserts on certificateError (stacktrace in bug report).

Remove blacklist on certificateError as bad certificate is back on line
and toPlainTextSync works without issues.

Fixes: QTBUG-97414
Pick-to: 6.2
Change-Id: Ib702bbe813f6061eef446e2d87d7e9e455d715c5
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>