src/core/renderer/web_engine_page_render_frame.h
@@ -63,16 +63,14 @@ private:
                                 FetchDocumentInnerTextCallback callback) override;
     void SetBackgroundColor(uint32_t color) override;
     void OnDestruct() override;
-    void DidMeaningfulLayout(blink::WebMeaningfulLayout layout_type) override;
-    void WasShown() override;
-    void WasHidden() override;
+    void DidFinishLoad() override;
     void
     BindReceiver(mojo::PendingAssociatedReceiver<qtwebenginepage::mojom::WebEnginePageRenderFrame>
                          receiver);
 
 private:
     mojo::AssociatedReceiver<qtwebenginepage::mojom::WebEnginePageRenderFrame> m_binding;
-    bool m_needsLayout;
+    bool m_ready;
 };
 } // namespace
 
